--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -41,6 +41,7 @@
     <link th:href="@{/css/style.css}" rel="stylesheet">
     <link th:href="@{/css/find.css}" rel="stylesheet">
 
+
 </head>
 
 
@@ -111,8 +112,43 @@
                     <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
+
                 <div class="modal-body">
-                    ...
+                    <div class="package-item">
+                        <div class="overflow-hidden">
+                            <img type="button" src="${item.picture}" class="img-fluid" data-bs-toggle="modal" alt="" data-bs-target="#exampleModal">
+                        </div>
+                        <div class="d-flex border-bottom">
+                            <small class="flex-fill text-center border-end py-2"><i
+                                    class="fa fa-map-marker-alt text-primary me-2"></i>
+                                <span>${item.town}</span></small>
+
+                            <small class="flex-fill text-center border-end py-2"><i
+                                    class="fa fa-map-marker-alt text-primary me-2"></i>
+                                <span id="travelvalue">${item.name}</span></small>
+                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>
+                                <span>${item.id}</span></small>
+                        </div>
+                        <div class="text-center p-4">
+                            <h3 class="mb-0">
+                                <span>${item.ticket}</span>
+                            </h3>
+                            <div class="mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                            </div>
+                            <p1><span class="overflow-auto">${item.introduce}</span></p1>
+                            <div class="d-flex justify-content-center mb-2">
+                                <button onclick="myFunction(${item.id})" class="btn btn-sm btn-primary px-3 border-end"
+                                        style="border-radius: 30px 0 0 30px;">購買
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -152,6 +188,7 @@
 <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
 <!-- Template Javascript -->
+
 
 
 <script src="js/main.js"></script>
