--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -69,7 +69,10 @@
         .margin-top {
             margin-top: 10px;
         }
+
+
     </style>
+
 
 <body>
 
@@ -96,6 +99,7 @@
 
 
     <!-- 導航欄 -->
+
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="index" class="navbar-brand p-0">
@@ -107,6 +111,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
+                    <button  type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cart">購物車 <span class="total-count"></span></button>
                     <a href="index" class="nav-item nav-link">首頁</a>
                     <a href="find" onclick="findAll()" class="nav-item nav-link">旅遊資訊</a>
                     <div class="nav-item dropdown">
@@ -114,8 +119,36 @@
                     </div>
                 </div>
             </div>
-
         </nav>
+            <!-- Modal -->
+        <div class="modal fade" id="cart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">購物車</h5>
+
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <table class="show-cart table">
+
+                        </table>
+                        <div>總額: NT<span class="total-cart"></span></div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <div><button class="clear-cart btn btn-danger">清除購物車</button></div>
+                        <button onclick="myFunction()" type="button" class="btn btn-primary">立即下定</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
         <div class="container-fluid bg-primary py-5 mb-5 hero-header2">
@@ -164,10 +197,25 @@
     </div>
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
+
+</div>
+
+
+
+
+
 </body>
+
+
+
+
+
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="lib/wow/wow.min.js"></script>
 <script src="lib/easing/easing.min.js"></script>
 <script src="lib/waypoints/waypoints.min.js"></script>
@@ -182,12 +230,19 @@
 <script src="js/main.js"></script>
 <script src="js/session.js"></script>
 <script src="js/session2.js"></script>
+<script src="js/shopcart.js"></script>
+<script src="js/shopcart2.js"></script>
 <script src="js/find.js"></script>
+
 <script>
     $(document).ready(function () {
         datalist();
     });
 </script>
+
+
+
+
 
 </html>
 
