--- a/TravelB/src/main/resources/templates/index.html
+++ b/TravelB/src/main/resources/templates/index.html
@@ -32,6 +32,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -117,6 +118,37 @@
     </div>
     <!-- Navbar & Hero End -->
 
+    <!-- Testimonial Start -->
+    <div id="dt" class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <!-- <div class="container">
+            <div class="text-center">
+                <h6 class="section-title bg-white text-center text-primary px-3">Testimonial</h6>
+                <h1 class="mb-5">Our Clients Say!!!</h1>
+            </div>
+            <div class="row owl-carousel testimonial-carousel position-relative">
+                <div class="row testimonial-item bg-white text-center border p-4">
+                    <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-1.jpg"
+                        style="width: 80px; height: 80px;">
+                    <h5 class="mb-0">地區1</h5>
+                    <p>時間</p>
+                    <p class="mb-0">溫度</p>
+                    <div class="col-lg-6">
+                        <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-1.jpg"
+                            style="width: 80px; height: 80px;">
+                        <p>時間</p>
+                        <p class="mb-0">溫度</p>
+                    </div>
+                    <div class="col-lg-6s">
+                        <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-1.jpg"
+                            style="width: 80px; height: 80px;">
+                        <p>時間</p>
+                        <p class="mb-0">溫度</p>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </div>
+    <!-- Testimonial End -->
 
     <!-- About Start -->
     <div class="container-xxl py-5">
@@ -129,7 +161,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h6 class="section-title bg-white text-start text-primary pe-3">歡迎</h6>
+                    <h6 class="section-title bg-white text-center text-primary px-3">歡迎</h6>
                     <h1 class="mb-4">選擇 <span class="text-primary">Tourist </span><span>的理由</span></h1>
                     <p class="mb-4" style="font-weight:bolder;">無論何時何地，我們都能帶你找到最棒的吃喝玩樂體驗！</p>
                     <p class="mb-4">想知道附近有什麼好吃好玩？或想來趟放鬆身心靈的旅行？ Tourist 通通有！輕鬆動動手指，玩樂一手掌握！</p>
@@ -146,7 +178,7 @@
                         <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>玩樂品質保證</p>
                         </div>
-                       
+
                     </div>
                     <a class="btn btn-primary py-3 px-5 mt-2" href="find" onclick="findAll()">查看更多景點</a>
                 </div>
@@ -154,6 +186,7 @@
         </div>
     </div>
     <!-- About End -->
+
 
     <!-- Destination Start -->
     <div class="container-xxl py-5 destination">
@@ -290,9 +323,9 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="js/weather.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
@@ -301,16 +334,17 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
+    
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <!-- Template Javascript -->
-
-    <script src="js/main.js"></script>
+    
     <script src="js/session.js"></script>
     <script src="js/find.js"></script>
+    <script src="js/main.js"></script>
+    
     <script>
 
-       
+
 
 
     </script>
