--- a/TravelB/src/main/resources/static/css/find.css
+++ b/TravelB/src/main/resources/static/css/find.css
@@ -1,20 +1,29 @@
-.img-fluid {
-    max-width: 600px;
-    max-height: 300px;
+/*圖片敘事的CSS*/
+#UC {
+    width: 400px;
+    height: 450px;
+    overflow: clip;
+    /*display: flex; !* 設定為 flex 元素 *!*/
+    justify-content: center; /* 內容水平居中 */
+    align-items: center; /* 內容垂直居中 */
 }
 
-/*圖片敘事的CSS*/
-p1u {
-    width: auto;
+#p1u {
+    width: 350px;
+    height: 150px;
     padding: 10px;
     border: 1px solid #4d4d4d;
-    overflow: scroll;
+    overflow: clip;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 5;
     box-sizing: border-box;
 
+}
+#img1{
+    width: 400px;
+    height: 250px;
 }
 
 
