--- a/TravelB/src/main/resources/templates/CIC.html
+++ b/TravelB/src/main/resources/templates/CIC.html
@@ -98,7 +98,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0" id="registerToBack">
                 <a href="index" class="nav-item nav-link">首頁</a>
-                <a href="find" class="nav-item nav-link active">旅遊資訊</a>
+                <a href="find" class="nav-item nav-link">旅遊資訊</a>
             </div>
         </div>
     </nav>
@@ -120,8 +120,10 @@
 
 
 <!-- 商品資訊 -->
-<div id="selectItemOrder">
-    
+<div>
+<div class="col" id="selectItemOrder">
+
+</div>
 </div>
 <!-- <div id="content" class="section-padding">
     <div class="container">
@@ -189,7 +191,7 @@
                                   商品資訊下列選單
                                 <div class="collapse" id="collapseExample">
                                     <div class="card card-body">
-                                      
+
 
                                                                                     </div>
                                         商品資訊!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -200,9 +202,24 @@
                 </div>
             </div>
         </div>
-    </div> 
-</div> 
+    </div>
+</div>
   -->
+<!-- Footer Start -->
+<div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container py-5">
+        <div class="row g-5">
+        </div>
+    </div>
+    <div class="container">
+        <div class="copyright">
+            <div class="row">
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer End -->
 
 </div>
 
