--- a/TravelB/src/main/resources/templates/payindex.html
+++ b/TravelB/src/main/resources/templates/payindex.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   
     <style>
 body {
   font-family: Arial;
@@ -124,16 +125,21 @@ span.price {
                         <i class="fa fa-cc-mastercard" style="color:red;"></i>
                         <i class="fa fa-cc-discover" style="color:orange;"></i>
                     </div>
-                    <label for="price">Total</label>
+
+                    <div id="paypalmenu">
+
+
+                    </div>
+                    <!-- <label for="price">Total</label>
                     <input type="text" id="price" name="price" value="10">
                     <label for="currency">Currency</label>
-                    <input type="text" id="currency" name="currency" placeholder="Enter Currency">
+                    <input type="text" id="currency" name="currency" value="TWD">
                     <label for="method">Payment Method</label>
-                    <input type="text" id="method" name="method" placeholder="Payment Method">
+                    <input type="text" id="method" name="method" value="paypal">
                     <label for="intent">Intent</label>
                     <input type="text" id="intent" name="intent" value="sale">
                     <label for="description">Payment Description</label>
-                    <input type="text" id="description" name="description" placeholder="Payment Description">
+                    <input type="text" id="description" name="description" value="testing"> -->
 
                 </div>
 
@@ -155,4 +161,10 @@ span.price {
 </div>
 
 </body>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
+
+<script>
+
+
+</script>
 </html>
